# YOLO-based-fire-detection-vehicle---Arduino-Mega2560

./: LICENSE  README.md  REAMDE-ko.md
arduino/motor-control/: BackMotor.cpp  BackMotor.h  FrontMotor.cpp  FrontMotor.h  sketch_may20a.ino
arduino/sensor-control/: Buzzer.cpp  Buzzer.h  Constants.h  Dht11Sensor.cpp  Dht11Sensor.h  GasSensor.cpp  GasSensor.h  Init.cpp  Init.h  Loop.cpp  Loop.h  MotionOutput.cpp  MotionOutput.h  MotionSensor.cpp  MotionSensor.h  UltrasonicSensor.cpp  UltrasonicSensor.h  WarningLed.cpp  WarningLed.h  WaterLevelSensor.cpp  WaterLevelSensor.h  sketch_may25a.ino
frontend/: .env.example  .gitattributes  .gitignore  index.html  index.js  package.json  pnpm-lock.yaml  vite.config.mjs
frontend/electron/: auth.js  env.js  preload.js
frontend/src/: App.svelte  app.css  main.js
frontend/src/config/: config.js
frontend/src/data/: download.js  sensors.js  temperature.js
frontend/src/modules/: ConnectionStatus.svelte  LeftPanel.svelte  Login.svelte  RightBottom.svelte  RightTop.svelte  SensorGrid.svelte  SettingsButton.svelte  SettingsModal.svelte  Toast.svelte  WasdHint.svelte
frontend/src/state/: heatmap.svelte.js  session.svelte.js
model/latest/best_int8_openvino_model/: best.xml  metadata.yaml
model/result/: args.yaml  results.csv
model/src/: convert_fall_labels.py  prepare_dataset.py  pyproject.toml  train.py  train.sh
server/: Cargo.toml
server/inference/: main.py  pyproject.toml  sensor_data.db
server/inference/weights/fine-tuned_openvino_model/: fine-tuned.xml  metadata.yaml
server/inference/weights/last_openvino_model/: last.xml  metadata.yaml
server/src/: main.rs
server/src/modules/: server.rs  session.rs
server/streaming(SHM)/: .gitignore
server/streaming(SHM)/src/modules/: capture.rs  config.rs  control.rs  mf_encoder.rs  mod.rs  pixel.rs  signaling.rs  webrtc.rs
