[package]
name = "streaming"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util", "signal"] }
tokio-tungstenite = "0.27"
webrtc = "0.13"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_Media_MediaFoundation",
    "Win32_Media_KernelStreaming",
] }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
