[project]
name = "yolo-fine-tune"
version = "0.1.0"
description = "Fine-tune yolo11n-seg on full COCO + fire dataset, export to OpenVINO for LattePanda"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.3.0",
    "pyyaml>=6.0",
    "torch",
    "torchvision",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
